Overflow iOS fix attempt #1

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+*{
+    overflow: hidden;
+}
+
 body {
     margin: 0;
 
 
     height: 100%;
-    overflow-y: hidden;
+    
 
 
     background-color: black;
@@ -24,7 +28,6 @@ a {
     width: 100vw;
     height: 100vh;
 
-    overflow: hidden;
 }
 
 .content {
@@ -35,7 +38,6 @@ a {
     width: 100vw;
     height: 70vh;
 
-    overflow: hidden;
 }
 
 .top-buttons {
